@@ -1,4 +1,4 @@
-/*	$OpenBSD: sshlogin.h,v 1.4 2002/08/29 15:57:25 stevesk Exp $	*/
+/*	$OpenBSD: sshlogin.h,v 1.5 2006/03/25 18:36:15 deraadt Exp $	*/
 
 /*
  * Author: Tatu Ylonen <ylo@cs.hut.fi>
@@ -14,11 +14,10 @@
 #ifndef SSHLOGIN_H
 #define SSHLOGIN_H
 
-void
-record_login(pid_t, const char *, const char *, uid_t,
+void	record_login(pid_t, const char *, const char *, uid_t,
     const char *, struct sockaddr *, socklen_t);
 void   record_logout(pid_t, const char *, const char *);
-u_long         get_last_login_time(uid_t, const char *, char *, u_int);
+time_t	get_last_login_time(uid_t, const char *, char *, u_int);
 
 #ifdef LOGIN_NEEDS_UTMPX
 void	record_utmp_only(pid_t, const char *, const char *, const char *,
