@@ -156,6 +156,9 @@
    - deraadt@cvs.openbsd.org 2006/03/25 18:30:55
      [clientloop.c serverloop.c]
      spacing
+   - deraadt@cvs.openbsd.org 2006/03/25 18:36:15
+     [sshlogin.c sshlogin.h]
+     nicer size_t and time_t types
 
 20060325
  - OpenBSD CVS Sync
@@ -4413,4 +4416,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.4279 2006/03/26 03:25:37 djm Exp $
+$Id: ChangeLog,v 1.4280 2006/03/26 03:27:35 djm Exp $
